src/manifests/ingress.yml
# apiVersion: networking.k8s.io/v1
# kind: Ingress
# metadata:
#   name: ingress
#   annotations:
#     service.beta.kubernetes.io/azure-dns-label-name: "apimingress"
# spec:
#   ingressClassName: "azure-api-management-gateway"
#   rules:
#     - http:
#         paths:
#           - path: /
#             pathType: Prefix
#             backend:
#               service:
#                 name: httpbin
#                 port:
#                   number: 8080
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.azure.com/tls-cert-keyvault-uri: "https://<KeyVaultName>.vault.azure.net/certificates/aks-ingress-tls/"

  name: httpbin
spec:
  ingressClassName: webapprouting.kubernetes.azure.com
  rules:
  - host: <Hostname>
    http:
      paths:
      - backend:
          service:
            name: httpbin
            port:
              number: 8080
        path: /
        pathType: Prefix
  tls:
  - hosts:
    - <Hostname>.<Region>.cloudapp.azure.com
    secretName: keyvault-httpbin
